feat(MultiGroupsForUsers): Added support for user to be part of multiple secondary groups and assume different secondary roles
Signed-off-by: Jaideep Palit <jaideep.palit@siemens.com>